# ucm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  KNOWN_ISSUES.md  MARKETING_SUGGESTIONS.md  Makefile  Manifest.in  PYPI_RELEASE_CHECKLIST.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_SHORT.md  RELEASE_v1.0.0.md  USER_GUIDE.md  create-release.sh  profile.sh  pyproject.toml  requirements.txt  setup.cfg  test_settings_ui.py
.github/workflows/: ci.yml  release.yml
examples/: ssh_connections.yml
homebrew/: README.md  ucm.rb
src/ucm/: AddConnectionDialog.py  Dialogs.py  DockerListView.py  DockerWidgets.py  Registry.py  SettingsDialog.py  SshListView.py  SwarmListView.py  SwarmWidgets.py  TabGroup.py  TmuxListView.py  UserConfig.py  Widgets.py  __main__.py  connection_manager.py  constants.py  help.txt  settings_manager.py  ucm-swarmlisting.sh  validators.py
src/ucm/services/: __init__.py  docker_service.py  iterm2_service.py  protocols.py  ssh_service.py  tmux_service.py
tests/: __init__.py  test_config.py  test_connection_manager.py  test_iterm2_service.py  test_logging.py  test_registry.py  test_services.py  test_settings_manager.py  test_ssh_commands.py  test_tmux_listview.py  test_tmux_service.py  test_validators.py
