[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucm"
dynamic = ["version"]
authors = [
    {name = "Robert Szabo", email = "rszabo50@gmail.com"}
]
description = "Urwid rendered Connection Manager"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6.0.3",
    "urwid>=2.1.0,<4.0.0",
    "panwid>=0.3.5",
]

[project.urls]
Homepage = "https://github.com/rszabo50/ucm"
"Bug Tracker" = "https://github.com/rszabo50/ucm/issues"

[project.scripts]
ucm = "ucm.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Automatically derive version from git tags
# Tags should be in format: v0.1.2 or 0.1.2
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E722",  # bare except (legacy code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["SIM117"]    # multiple with statements
"src/ucm/*.py" = ["N999"]  # module naming (intentional PascalCase)
"src/bin/ucm" = ["F841"]   # unused variable in legacy code

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
# Legacy codebase - focus on catching critical errors only
ignore_errors = false
allow_untyped_calls = true
allow_untyped_defs = true
allow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["urwid.*", "panwid.*", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ucm.*"]
# Be lenient with legacy code
disable_error_code = ["override", "attr-defined", "name-defined", "union-attr", "arg-type", "call-arg", "assignment", "var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
