[metadata]
name = ucm
version = 0.0.6
author = Robert Szabo
author_email = rszabo50@gmail.com
description = Urwid rendered Connection Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rszabo50/ucm
project_urls =
    Bug Tracker = https://github.com/rszabo50/ucm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    src/bin/ucm

install_requires =
    PyYAML
    urwid
    panwid

[options.packages.find]
where = src

