[metadata]
name = ucm
version = attr: ucm.constants.PROGRAM_VERSION
author = Robert Szabo
author_email = rszabo50@gmail.com
description = Urwid rendered Connection Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rszabo50/ucm
project_urls =
    Bug Tracker = https://github.com/rszabo50/ucm/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Development Status :: 5 - Production/Stable
    Operating System :: MacOS :: MacOS X
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: BSD/OS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: GNU Hurd
    Operating System :: POSIX :: HP-UX
    Operating System :: POSIX :: IRIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Other
    Operating System :: POSIX :: SCO
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    src/bin/ucm

install_requires =
    PyYAML
    urwid
    panwid
    datatables

[options.packages.find]
where = src

[options.package_data]
* = *.txt

